Testing title image to be resizable